[tool.poetry]
name = "ebml"
version = "0.1.0"
description = "Module to parse a Matroska EBML file."
authors = ["Joe Rabinoff <bobqwatson@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
